--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="middle-container">
         <div class="profile">
-          <img src="images/paritosh.png" alt="My Image" height = 250px width = 250px>
+          <img src="images/Paritosh2.png" alt="My Image" height = 250px width = 250px>
           <h2>Hello.</h2>
           <p>This is me.I am currently pursuing B.Tech. in Electrical Engineering from IIT Roorkee.</p>
         </div>
