--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class = "robot" src="images\Animated-Robot.png" alt="Robot-img" height="700">
+      <img class = "robot" src="images\Animated-Robot.png" alt="Robot-img" width = "40%">
       <img class = "top-bulb" src="images\Animated-Bulb-Top.png" alt="Bulb-img">
       <h1 class="Me">Hi! I'm Paritosh<br><span class="Me2">An ML,AI enthusiast.</span></h1>
       <img class = "bottom-bulb" src="images\Animated-Bulb-Bottom.png" alt="Bulb-img">
