--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="top-container">
       <img class = "robot" src="images\Animated-Robot.png" alt="Robot-img" width = "40%">
-      <img class = "top-bulb" src="images\Animated-Bulb-Top.png" alt="Bulb-img">
+      <img class = "top-bulb" src="images\Animated-Bulb-Top.png" alt="Bulb-img" width = "10%">
       <h1 class="Me">Hi! I'm Paritosh<br><span class="Me2">An ML,AI enthusiast.</span></h1>
-      <img class = "bottom-bulb" src="images\Animated-Bulb-Bottom.png" alt="Bulb-img">
+      <img class = "bottom-bulb" src="images\Animated-Bulb-Bottom.png" alt="Bulb-img" width = "10%">
 
       <div class="middle-container">
         <div class="profile">
