--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class = "robot" src="images\Animated-Robot.png" alt="Robot-img" width = "40%">
+      <img class = "robot" src="images\Animated-Robot.png" alt="Robot-img" height = "700px">
       <img class = "top-bulb" src="images\Animated-Bulb-Top.png" alt="Bulb-img" width = "10%">
       <h1 class="Me">Hi! I'm Paritosh<br><span class="Me2">An ML,AI enthusiast.</span></h1>
       <img class = "bottom-bulb" src="images\Animated-Bulb-Bottom.png" alt="Bulb-img" width = "10%">
@@ -45,6 +45,7 @@
 
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/paritosh-sanadhya-a010921a5/">LinkedIn</a>
+        <p>         </p>
         <a class="footer-link" href="https://twitter.com/pasa_1912">Twitter</a>
         <center><p>© 2020 Paritosh Sanadhya.</p></center>
       </div>
