--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   </head>
   <body>
     <div class="top-container">
-      <img class = "robot" src="images\Animated-Robot.png" alt="Robot-img" height = "700px">
-      <img class = "top-bulb" src="images\Animated-Bulb-Top.png" alt="Bulb-img" width = "10%">
-      <h1 class="Me">Hi! I'm Paritosh<br><span class="Me2">An ML,AI enthusiast.</span></h1>
-      <img class = "bottom-bulb" src="images\Animated-Bulb-Bottom.png" alt="Bulb-img" width = "10%">
-
+      <img class = "cloud-top" src="images\cloud.png" alt="cloud-img" width = "13%"><br><br><br>
+        <h1>Hi! I'm Paritosh</h1>
+        <p>An ML,AI enthusiast.</p>
+      <img class = "cloud-bottom" src="images\cloud.png" alt="cloud-img" width = "13%">
+      <img class = "mountain" src="images\mountain.png" alt="mountain-img" width = "50%">
+    </div>
       <div class="middle-container">
         <div class="profile">
           <img src="images/Paritosh2.png" alt="My Image" height = 250px width = 250px>
           <h2>Hello.</h2>
-          <p>This is me.I am currently pursuing B.Tech. in Electrical Engineering from IIT Roorkee.</p>
+          <p>This is me. I am currently pursuing B.Tech. in Electrical Engineering from IIT Roorkee.</p>
         </div>
         <hr>
         <div class="skills">
