--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <div class="top-container">
-      <img class = "cloud-top" src="images\cloud.png" alt="cloud-img" width = "13%"><br><br><br>
+      <img class = "cloud-top" src="images/cloud.png" alt="cloud-img" width = "13%"><br><br><br>
         <h1>Hi! I'm Paritosh</h1>
         <p>An ML,AI enthusiast.</p>
-      <img class = "cloud-bottom" src="images\cloud.png" alt="cloud-img" width = "13%">
-      <img class = "mountain" src="images\mountain.png" alt="mountain-img" width = "50%">
+      <img class = "cloud-bottom" src="images/cloud.png" alt="cloud-img" width = "13%">
+      <img class = "mountain" src="images/mountain.png" alt="mountain-img" width = "50%">
     </div>
       <div class="middle-container">
         <div class="profile">
